		  is now the default. 
		  It can be disabled by building with -DDO_NOT_USE_EE
		- added screw joint (Mauro Manetti & Marco Morandini)
		- added discrete filter drive caller
		- added drive caller constitutive law wrapper
		- added support for NetCDF4 (Louis Gagnon)
	Backward compatibility issues:
		- now escape sequences are honored in "hints"
	Known issues:
		- gravity not used in assembly
	Bug fixes:
		- fix TotalPinJoint assembly (Eduardo Okabe)
		- fix eigenanalysis before derivatives
		- fix initialization (Reinhard Resch)
		- fix one-time leak in axial wrapper
		- fix inconsistency in step drive callers docs
		- fix escaping in hints
		- fix "reference" to drive callers in drive caller hints
		- fix inconsistency in rod constitutive law docs
		- fix total pin joint initial assembly (Eduardo Okabe)
		- fix aerodynamic elements output at Gauss points
		  (noted by Roberta Cumbo)
		- fix sign in dynamic inflow (noted by Neda Taymourtash)

MBDyn 1.7.3
	Enhancements:
		- added network byte order to drivers & element output streams
		- added width/format for eigenanalysis output files
		  (noted by Reinhard Resch)
		- added relative output of follower force/couple
		- refactored communication code (stream drivers and output
		  elements) to support user-defined communicators (Luca Conti
		  for GSoC 2017)
		- added module-flightgear (Luca Conti for GSoC 2017)
		- added automatic derivatives coefficient estimation
		  (Reinhard Resch)
	Backward compatibility issues:
		- got rid of adams and motionview output support
		- deprecated "drees 2" rotor inflow model (identical to
		  "dreese")
	Known issues:
	Bug fixes:
		- fixed (harmless?) off-by-one read in fixed step drive
		- fixed bugs in timestep control (Reinhard Resch)
		- fixed default max time step (Reinard Resch)
		- fixed build without libmbc (noted by Richard Crozier)
		- fixed test if residual is NaN (Reinard Resch)
		- fixed error message in strext (Richard Crozier)